
# There is nothing to make here, but we put README in
# the tarball so that this directory is sure to be there,
# because it is where the pdf manual is put...
#
MAINTAINERCLEANFILES	=	Makefile.in
TARGETS			=

# what is the correct way to list an included file
# that should be part of the distribution?

noinst_HEADERS		= README

