SUBDIRS = veclib

noinst_HEADERS =			\
			boolean.h	\
			callback_api.h	\
			chewtext.h	\
			cmaps.h		\
			cuda_supp.h	\
			data_obj.h	\
			dct8.h		\
			debug.h		\
			display.h	\
			dispobj.h	\
			fileck.h	\
			filerd.h	\
			filetype.h	\
			fio_api.h	\
			fitsine.h	\
			freel.h		\
			function.h	\
			gen_win.h	\
			getbuf.h	\
			gl_viewer.h	\
			gmovie.h	\
			gui.h		\
			handle.h	\
			hash.h		\
			help.h		\
			img_file.h	\
			items.h		\
			linear.h	\
			macros.h	\
			menuname.h	\
			mlab.h		\
			param_api.h	\
			namesp.h	\
			nexpr.h		\
			node.h		\
			nports_api.h	\
			nvf_api.h	\
			nrm_api.h	\
			optimize.h	\
			parport.h	\
			pathnm.h	\
			query.h		\
			quip_config.h	\
			quip_version.h	\
			rv_api.h	\
			rn.h		\
			rt_sched.h	\
			savestr.h	\
			seq_api.h	\
			serbuf.h	\
			serial.h	\
			sigpush.h	\
			sound.h		\
			strbuf.h	\
			submenus.h	\
			substr.h	\
			treecode.h	\
			ttyctl.h	\
			typedefs.h	\
			uio.h		\
			vecgen.h	\
			vec_util.h	\
			version.h	\
			viewer.h	\
			vldefs.h	\
			void.h		\
			Xhs.h		\
			xparam.h	\
			xsupp.h

quip_config.h:	quip_version.h

# How can we make the file get redone automatically by git???
quip_version.h:
	./update_quip_version.sh

