
SUBDIRS =							\
		newvec						\
		fileio						\
		ptgrey						\
		pic						\
		gsl						\
		visca						\
		opengl						\
		ieee1394					\
		opencv						\
		cuda						\
		parport		gps				\
		das1602		usb2000		meteor		\
		v4l2		dither		knox		\
		qutil		dobj		nports		\
		interpreter	datamenu			\
		rawvol		vectree				\
		vec_util	mvimenu		seq		\
		view		viewmenu	xsupp		\
		genwin		luts		lutmenu		\
		psych		cstepit		www		\
		gui		nrmenu		sound		\
		atc

