
SUBDIRS =							\
		newvec						\
		fileio						\
		ptgrey						\
		pic						\
		gsl						\
		visca						\
		opengl						\
		ieee1394					\
		opencv						\
		cuda						\
		parport		\
		das1602		usb2000		meteor		\
		v4l2		dither		knox		\
		dobj		\
		interpreter	\
		rawvol		vectree				\
		vec_util	mvimenu		seq		\
		view		xsupp		\
		genwin		\
		psych		cstepit		www		\
		gui		nrmenu		sound


