
#SUBDIRS =							\
#		fileio						\
#		ptgrey						\
#		gsl						\
#		visca						\
#		opengl						\
#		ieee1394					\
#		opencv						\
#		cuda						\
#		parport		\
#		das1602		usb2000		meteor		\
#		v4l2		dither		knox		\
#		dobj		\
#		interpreter	\
#		rawvol		vectree				\
#		vec_util	mvimenu		seq		\
#		view		xsupp		\
#		psych		cstepit		www		\
#		gui		nrmenu		sound
#

SUBDIRS =			\
		opencl		\
		veclib		\
		veclib2		\
		cuda		\
		cu2		\
		nrmenu		\
		www		\
		cstepit		\
		fann		\
		opencv		\
		flycap		\
		ptgrey		\
		das1602		\
		ieee1394	\
		parport		\
		knox		\
		gsl		\
		seq		\
		meteor		\
		sound		\
		visca		\
		v4l2		\
		psych		\
		gui		\
		opengl		\
		polhemus	\
		usb2000		\
		rawvol		\
		mvimenu		\
		unix		\
		view		\
		xsupp		\
		hips		\
		ports		\
		fileio		\
		dither		\
		vectree		\
		vec_util	\
		dobj		\
		interpreter

#parport
#polhemus
#usb2000
