
noinst_HEADERS =			\
					\
			avcodec_hdr.h	\
			bdf_hdr.h	\
			bmp_hdr.h	\
			fiotiff.h	\
			fio_png.h	\
			get_hdr.h	\
			glimage.h	\
			img_file_hdr.h	\
			jbm_ppm.h	\
			jpeg_hdr.h	\
			lshdr.h		\
			matio_api.h	\
			matio_hdr.h	\
			my_avi.h	\
			png_hdr.h	\
			ppmhdr.h	\
			rasterf.h	\
			raw.h		\
			rv.h		\
			sir_disk.h	\
			sunras.h	\
			tiff_hdr.h	\
			vistahdr.h	\
			wav.h		\
			wav_hdr.h
